crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_with_params.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: parse(src)
---
Function(
    Function {
        span: 0..29,
        params: [
            FuncParam {
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            span: 4..5,
                            mutable: false,
                        },
                    ),
                },
                type_ann: None,
                optional: false,
            },
            FuncParam {
                pattern: Pattern {
                    span: 7..8,
                    kind: Ident(
                        BindingIdent {
                            name: "y",
                            span: 7..8,
                            mutable: false,
                        },
                    ),
                },
                type_ann: None,
                optional: false,
            },
        ],
        body: Block(
            Block {
                span: 12..29,
                stmts: [
                    Stmt {
                        kind: Return {
                            arg: Some(
                                Binary(
                                    Binary {
                                        span: 22..27,
                                        left: Ident(
                                            Ident {
                                                name: "x",
                                                span: 22..23,
                                            },
                                        ),
                                        op: Plus,
                                        right: Ident(
                                            Ident {
                                                name: "y",
                                                span: 26..27,
                                            },
                                        ),
                                    },
                                ),
                            ),
                        },
                        span: 22..27,
                    },
                ],
            },
        ),
        type_ann: None,
        is_async: false,
    },
)
