crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_with_type_annotation_and_throws.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"fn (x: number, y: number) -> number throws string => x + y\"#)"
---
Expr {
    kind: Function(
        Function {
            type_params: None,
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "x",
                                span: 4..5,
                                mutable: false,
                            },
                        ),
                        span: 4..5,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: Number,
                            span: 7..13,
                            inferred_type: None,
                        },
                    ),
                    optional: false,
                },
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "y",
                                span: 15..16,
                                mutable: false,
                            },
                        ),
                        span: 15..16,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: Number,
                            span: 18..24,
                            inferred_type: None,
                        },
                    ),
                    optional: false,
                },
            ],
            body: Expr(
                Expr {
                    kind: Binary(
                        Binary {
                            left: Expr {
                                kind: Ident(
                                    Ident {
                                        name: "x",
                                        span: 53..54,
                                    },
                                ),
                                span: 53..54,
                                inferred_type: None,
                            },
                            op: Plus,
                            right: Expr {
                                kind: Ident(
                                    Ident {
                                        name: "y",
                                        span: 57..58,
                                    },
                                ),
                                span: 57..58,
                                inferred_type: None,
                            },
                        },
                    ),
                    span: 53..58,
                    inferred_type: None,
                },
            ),
            type_ann: Some(
                TypeAnn {
                    kind: Number,
                    span: 29..35,
                    inferred_type: None,
                },
            ),
            throws: Some(
                TypeAnn {
                    kind: String,
                    span: 43..49,
                    inferred_type: None,
                },
            ),
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..58,
    inferred_type: None,
}
