crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_function_with_type_annotations.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"fn (x: number, y: number): number => { return x + y; }\"#)"
---
Expr {
    kind: Function {
        params: [
            FuncParam {
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            span: 4..5,
                            mutable: false,
                        },
                    ),
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Number,
                        span: 7..13,
                    },
                ),
                optional: false,
            },
            FuncParam {
                pattern: Pattern {
                    span: 15..16,
                    kind: Ident(
                        BindingIdent {
                            name: "y",
                            span: 15..16,
                            mutable: false,
                        },
                    ),
                },
                type_ann: Some(
                    TypeAnn {
                        kind: Number,
                        span: 18..24,
                    },
                ),
                optional: false,
            },
        ],
        body: Block(
            Block {
                span: 36..54,
                stmts: [
                    Stmt {
                        kind: Return {
                            arg: Some(
                                Expr {
                                    kind: Binary {
                                        left: Expr {
                                            kind: Identifier(
                                                "x",
                                            ),
                                            span: 46..47,
                                        },
                                        op: Plus,
                                        right: Expr {
                                            kind: Identifier(
                                                "y",
                                            ),
                                            span: 50..51,
                                        },
                                    },
                                    span: 46..51,
                                },
                            ),
                        },
                        span: 46..51,
                    },
                ],
            },
        ),
        type_ann: Some(
            TypeAnn {
                kind: Number,
                span: 27..33,
            },
        ),
    },
    span: 0..54,
}
