crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_functional_component_with_fragment.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"fn (props) => <>{props.children}</>\")"
---
Expr {
    kind: Function(
        Function {
            type_params: None,
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "props",
                                span: 4..9,
                                mutable: false,
                            },
                        ),
                        span: 4..9,
                        inferred_type: None,
                    },
                    type_ann: None,
                    optional: false,
                },
            ],
            body: Expr(
                Expr {
                    kind: JSXFragment(
                        JSXFragment {
                            span: 15..35,
                            opening: JSXOpeningFragment,
                            children: [
                                ExprContainer(
                                    JSXExprContainer {
                                        expr: Expr {
                                            kind: Member(
                                                Member {
                                                    object: Expr {
                                                        kind: Ident(
                                                            Ident {
                                                                name: "props",
                                                                span: 17..22,
                                                            },
                                                        ),
                                                        span: 17..22,
                                                        inferred_type: None,
                                                    },
                                                    property: Ident(
                                                        Ident {
                                                            name: "children",
                                                            span: 23..31,
                                                        },
                                                    ),
                                                    opt_chain: false,
                                                },
                                            ),
                                            span: 17..31,
                                            inferred_type: None,
                                        },
                                    },
                                ),
                            ],
                            closing: JSXClosingFragment,
                        },
                    ),
                    span: 15..35,
                    inferred_type: None,
                },
            ),
            type_ann: None,
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..35,
    inferred_type: None,
}
