crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_indexing.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a[1][c]\")"
---
Expr {
    kind: Index(
        Member {
            object: Expr {
                kind: Index(
                    Member {
                        object: Expr {
                            kind: Ident(
                                Ident {
                                    name: "a",
                                    span: 0..1,
                                },
                            ),
                            span: 0..1,
                            inferred_type: None,
                        },
                        property: Expr {
                            kind: Num(
                                Num {
                                    value: "1",
                                },
                            ),
                            span: 2..3,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..3,
                inferred_type: None,
            },
            property: Expr {
                kind: Ident(
                    Ident {
                        name: "c",
                        span: 5..6,
                    },
                ),
                span: 5..6,
                inferred_type: None,
            },
        },
    ),
    span: 0..6,
    inferred_type: None,
}
