crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_lambdas.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"fn (x, y) => x + y\")"
---
Function(
    Function {
        span: 0..18,
        params: [
            FuncParam {
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            span: 4..5,
                            mutable: false,
                        },
                    ),
                },
                type_ann: None,
                optional: false,
            },
            FuncParam {
                pattern: Pattern {
                    span: 7..8,
                    kind: Ident(
                        BindingIdent {
                            name: "y",
                            span: 7..8,
                            mutable: false,
                        },
                    ),
                },
                type_ann: None,
                optional: false,
            },
        ],
        body: Expr(
            Binary(
                Binary {
                    span: 13..18,
                    left: Ident(
                        Ident {
                            name: "x",
                            span: 13..14,
                        },
                    ),
                    op: Plus,
                    right: Ident(
                        Ident {
                            name: "y",
                            span: 17..18,
                        },
                    ),
                },
            ),
        ),
        type_ann: None,
        is_async: false,
    },
)
