crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_literals-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"true\")"
---
Bool(
    Bool {
        span: 0..4,
        value: true,
    },
)
