crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_literals-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"false\")"
---
Expr {
    kind: Bool(
        Bool {
            value: false,
        },
    ),
    span: 0..5,
    inferred_type: None,
}
