crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_literals-4.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"null\")"
---
Expr {
    kind: Null(
        Null,
    ),
    span: 0..4,
    inferred_type: None,
}
